<resources>
    <string name="app_name">EgunerokoApp</string>

    <string name="nombre_text">NOMBRE</string>
    <string name="contrasena_text">CONTRASEÑA</string>
    <string name="dni_text">DNI</string>

    <string name="nombre_hint">Introduce nombre</string>
    <string name="contrasena_hint">Introduce contraseña</string>
    <string name="dni_hint">Introduce DNI</string>

    <string name="registarse">REGISTARSE</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="sacar_foto">SACAR FOTO DE PERFIL</string>

    <string name="login_text">LOGIN</string>
    <string name="login_contrasena_text">CONTRASEÑA</string>

    <string name="login_hint">Introduce login</string>

    <string name="goizean">GOIZEAN</string>
    <string name="klasean">KLASEAN</string>
    <string name="arratsaldean">ARRATSALDEAN</string>
    <string name="puntuazioa">PUNTUAZIOA</string>

    <string name="gozoGozoa">GOZO GOZOA</string>
    <string name="bagoaz">BAGOAZ</string>

    <string name="zer_diozu">ZER DIOZU?</string>
    <string name="gozo_gozoa">GOZO GOZOA</string>
    <string name="button_konprobatu">KONPROBATU</string>
    <string name="button_gorde">GORDE</string>
    <string name="test_opcion_correcta">ONDO</string>
    <string name="test_opcion_incorrecta">TXARTO</string>

    <string name="zerDiozu1">1. ESKERRIK ASKO</string>
    <string name="zerDiozu2">2. KAIXO</string>
    <string name="zerDiozu3">3. AGUR</string>
    <string name="zerDiozu4">4. BARKATU</string>
    <string name="zerDiozu5">5. EGUN ON</string>
    <string name="zerDiozu6">6. EMANGO ZENIDAKE...</string>
    <string name="zerDiozu7">7. ZER ORDU DA?</string>
    <string name="eremuak_beteta">Eremu guztiak bete behar dituzu!!!</string>
    <string name="ekintzak">JOLASTEKO EKINTZAK</string>

    <string name="eguna">EGUNA</string>
    <string name="ordua">ORDUA</string>
    <string name="erabiltzailea">ERABILTZAILEA</string>
    <string name="jokua">JOKUA</string>
    <string name="puntuak">PUNTUAK</string>

    <string name="no_camera">No dispones de camara en el dispositivo</string>
    <string name="no_app">No dispones de la aplicación necesaria</string>
    <string name="usuario_incorrecto">El login o la contraseña no son validos</string>
    <string name="campos">Hay que rellenar todos los campos</string>
    <string name="registro">El registro se ha realizado correctamente!! Para jugar primero tienes que logearte. Tu login es: </string>
    <string name="error_registro">El usuario ya existe</string>
    <string name="gordeEz">Emaitzak ez dira gorde!!</string>
    <string name="gordeta">Emaitzak ondo gorde dira!!</string>
</resources>
