<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.egunerokoapp.tta.egunerokoapp.presentacion.RegistroActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:columnCount="2">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_text" />

        <EditText
            android:id="@+id/nombre_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_hint"/>

        <TextView
            android:id="@+id/dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni_text" />

        <EditText
            android:id="@+id/dni_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dni_hint"/>

        <TextView
            android:id="@+id/contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena_text" />

        <EditText
            android:id="@+id/contrasena_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena_hint"/>
    </GridLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">
        <TableRow>
            <Button
                android:layout_height="wrap_content"
                android:text="@string/registarse"
                android:onClick="lanzarlogin"/>
            <Button
                android:layout_height="wrap_content"
                android:text="@string/iniciar_sesion"
                android:onClick="lanzarlogin"/>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sacar_foto"
        android:onClick="sacarFoto"/>

</LinearLayout>
