<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eus.ehu.egunerokoapp.tta.egunerokoapp.presentacion.LoginActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:columnCount="2">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text" />

        <EditText
            android:id="@+id/login_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/login_hint"/>

        <TextView
            android:id="@+id/login_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_contrasena_text" />

        <EditText
            android:id="@+id/login_contrasena_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena_hint"/>
    </GridLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion"
        android:onClick="lanzarMenu"/>


</LinearLayout>
