<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eus.ehu.egunerokoapp.tta.egunerokoapp.presentacion.BagoazActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bagoaz"
            android:textSize="20dp"
            android:layout_margin="10dp"
            android:gravity="center"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1"
            android:layout_marginBottom="10dp">

            <TableRow>

                <Button
                    android:id="@+id/bagoazBotoi1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

                <ImageView
                    android:id="@+id/bagoazIrudia1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="10dp" />
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/bagoazBotoi2"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/bagoazIrudia2"/>
            </TableRow>
            <TableRow>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/bagoazBotoi3"/>
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/bagoazIrudia3"/>
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/button_bagoaz_konprobatu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_konprobatu"
            android:onClick="konprobatuBagoaz"/>
        <Button
            android:id="@+id/button_bagoaz_gorde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="@string/button_gorde"
            android:onClick="gorde"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:id="@+id/footerBagoaz"
        android:background="#DCDCDC">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emaitzak_bagoaz"
            android:layout_margin="15dp"
            android:layout_marginBottom="15dp"/>
    </RelativeLayout>
</RelativeLayout>
